<resources>
    <string name="app_name">栃ナビ！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- app -->
    <string name="app_copyright">© Yamazen Communications Co.,Ltd. All Rights Reserved.</string>
    <string name="title_activity_init_description">ActivityInitDescription</string>

    <!-- loading -->
    <string name="loading_normal_message">読み込み中...</string>

    <!-- alert -->
    <string name="alert_network_error">サーバーに接続できません\n≪対処方法≫\n・時間をおいて更新する\n・電波の届くところに移動する</string>

    <!-- activity_init_description -->
    <string name="init_description_title">初めての方</string>
    <string name="init_description_button_close">開始する</string>
    <string name="title_activity_app_data_update">ActivityAppDataUpdate</string>

    <!-- activity_app_data_update -->
    <string name="app_data_update_titile">データの更新中</string>
    <string name="app_data_update_loading_msg">読み込み中...</string>
    <string name="app_data_update_button_retry">再度、更新する</string>
    <string name="app_data_update_button_close">閉じる</string>

    <!-- activity_login -->
    <string name="login_title">ログイン</string>
    <string name="login_loading_msg">ログインしています...</string>
    <string name="login_email_hint">栃ナビ！ID（メールアドレス）</string>
    <string name="login_password_hint">パスワード</string>
    <string name="login_password_ime">認証</string>
    <string name="login_button_login">ログイン</string>
    <string name="login_forget_link">ID、パスワードを忘れてしまった方はこちら ></string>
    <string name="login_new_member_msg">栃ナビ！の新規会員登録はPCまたは\nスマートフォンWEBから行えます</string>

    <!-- fragment_spot_neighbor_list -->
    <string name="spot_neighbor_list_title">周辺を探す</string>
    <string name="spot_neighbor_list_coupon">クーポン</string>
    <string name="spot_neighbor_list_checkin">チェックインが可能です</string>

    <!-- fragment_spot_search -->
    <string name="spot_search_title">検索する</string>
    <string name="spot_search_sv_hint">検索ワードを入力</string>
    <string name="spot_search_sv_cancel">キャンセル</string>

    <!-- fragment_ranking -->
    <string name="ranking_title">ランキング</string>
    <string name="ranking_tag_review">クチコミ数</string>
    <string name="ranking_tag_checkin">チェックイン数</string>

    <!-- fragment_mypage -->
    <string name="mypage_title">Myページ</string>
    <string name="mypage_no_login_msg">ご利用するにはログインが必要です</string>
    <string name="mypage_button_login">ログイン</string>

    <!-- activity_my_page_setting -->
    <string name="my_page_setting_title">設定</string>
    <string name="my_page_setting_notice_caption">近くにお気に入りスポットがあると通知</string>
    <string name="my_page_setting_notice_title">通知を許可</string>
    <string name="my_page_setting_login_title">ログイン</string>

    <!-- activity_spot_neighbor_narrow -->
    <string name="spot_neighbor_narrow_title">絞込み</string>
    <string name="spot_neighbor_narrow_category_caption">カテゴリー</string>
    <string name="spot_neighbor_narrow_distance_caption">表示範囲</string>
    <string name="spot_neighbor_narrow_other_caption">その他</string>
    <string name="spot_neighbor_narrow_coupon_title">クーポンあり</string>
    <string name="spot_neighbor_narrow_select">選択してください</string>
    <string name="spot_neighbor_narrow_no_select">指定なし</string>
    <string name="spot_neighbor_narrow_clear">条件をクリア</string>
    <string name="spot_neighbor_narrow_search">検索</string>

    <!-- activity_spot_search_narrow -->
    <string name="spot_search_narrow">絞込み条件</string>

    <!-- activity_spot_search_narrow_category_multi -->
    <string name="spot_search_narrow_category_multi_clear">選択を解除</string>
    <string name="spot_search_narrow_category_multi_done">決定</string>

    <!-- activity_spot_search_narrow_area -->
    <string name="spot_search_narrow_area_clear">選択を解除</string>
    <string name="spot_search_narrow_area_done">決定</string>

    <!-- activity_spot_info_image_search -->
    <string name="spot_info_actions_review">クチコミ</string>
    <string name="spot_info_actions_favorite">お気に入り</string>
    <string name="spot_info_actions_checkin">チェックイン</string>
    <string name="spot_info_actions_map">地図</string>
    <string name="spot_info_actions_phone">電話</string>

    <!-- activity_spot_map -->
    <string name="spot_map_show_route">経路を表示</string>
    <string name="spot_map_cancel_route">経路を解除</string>
    <string name="spot_map_return_current">現在地に戻る</string>
    <string name="spot_map_show_all">全体を表示</string>
    <string name="spot_map_app_route">"    目的地まで案内    "</string>

    <!-- activity_input_review -->
    <string name="input_review_title_date">訪問日</string>
    <string name="input_review_title_review">クチコミを書く</string>
    <string name="input_review_title_image">写真を投稿する</string>
    <string name="input_review_title_tag">タグを追加する</string>
    <string name="input_review_no_select">選択してください</string>
    <string name="input_review_review_hint">おすすめする理由やポイントなど、具体的に入力してください。（50文字以上）\n※絵文字は正しく反映されないことがありますので、お控えください。</string>
    <string name="input_review_image_hint">・写真は%d枚まで選択できます\n・「メイン」は一覧で表示される写真です\n・ドラッグでの写真の並び替えができます</string>
    <string name="input_review_button_close_review">閉じる</string>
    <string name="input_review_image_add">写真を追加</string>
    <string name="input_review_image_delete">削除</string>
    <string name="input_review_image_main">メイン</string>
    <string name="input_review_button_delete">下書きを削除</string>
    <string name="input_review_button_save">下書きに保存</string>
    <string name="input_review_button_post">投稿</string>

    <!-- activity_input_review_tag -->
    <string name="input_review_tag_button_clear">選択解除</string>
    <string name="input_review_tag_button_add">追加</string>

    <!-- activity_spot_info -->
    <string name="spot_info_tel">電話する</string>
    <string name="spot_info_map">地図をみる</string>
    <string name="spot_info_checkin">チェックイン</string>
    <string name="spot_info_review">クチコミをする</string>
    <string name="spot_info_image_only">写真を投稿する</string>
    <string name="spot_info_favorite">お気に入り中</string>
    <string name="spot_info_favorite_dis">お気に入り</string>
    <string name="spot_info_review_more">すべてのクチコミをみる</string>
    <string name="spot_info_mail">メール</string>
    <string name="spot_info_facebook">Facebook</string>
    <string name="spot_info_line">LINE</string>
    <string name="spot_info_twitter">Twitter</string>

    <!-- activity_spot_review_list -->
    <string name="spot_review_list_param_title">クチコミ数</string>

    <!-- activity_spot_review_detail -->
    <string name="spot_review_detail_good_kita">\"ぐッ\"ときた　%d人</string>

    <!-- activity_spot_review_gallery_image_search -->
    <string name="spot_review_gallery_image_search_detail">詳細 ＞</string>

    <!-- modal_get_badge -->
    <string name="get_badge_title">称号を取得しました！！</string>
    <string name="get_badge_button">OK</string>

    <!-- share -->
    <string name="share_mail">"  メール"</string>
    <string name="share_line">"  LINE"</string>

    <!-- menu -->
    <string name="menu_setting">設定</string>
    <string name="menu_search_narrow">絞込み</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_spot_map">Map</string>

</resources>
