<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAppDataUpdate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_data_update_titile"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <include layout="@layout/merge_line_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/activity_app_data_update_logo_width"
            android:layout_height="@dimen/activity_app_data_update_logo_height"
            android:layout_marginBottom="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_app_logo"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:indeterminateDrawable="@drawable/progress_circular_normal"/>

        <TextView
            android:id="@+id/textViewMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:paddingBottom="36dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:text="@string/app_data_update_loading_msg" />

        <net.tochinavi.www.tochinaviapp.view.ButtonAction
            android:id="@+id/buttonRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/app_data_update_button_retry"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <net.tochinavi.www.tochinaviapp.view.ButtonCancel
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/app_data_update_button_close"
            android:textSize="13sp"
            android:textStyle="bold"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
