<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:layout_alignParentBottom="true"
        android:paddingBottom="9dp"
        android:orientation="horizontal">

        <!-- クチコミ -->
        <LinearLayout
            android:id="@+id/viewReview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_spot_info_action_review"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:text="@string/spot_info_actions_review"/>
        </LinearLayout>

        <!-- お気に入り -->
        <LinearLayout
            android:id="@+id/viewFavorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageViewFavorite"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_spot_info_action_favorite_dis"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="11sp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:text="@string/spot_info_actions_favorite"/>
        </LinearLayout>

        <!-- チェックイン -->
        <LinearLayout
            android:id="@+id/viewCheckin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageViewCheckin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_spot_info_action_checkin_dis"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="11sp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:text="@string/spot_info_actions_checkin"/>
        </LinearLayout>

        <!-- 地図 -->
        <LinearLayout
            android:id="@+id/viewMap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_spot_info_action_map"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:text="@string/spot_info_actions_map"/>
        </LinearLayout>

        <!-- 電話 -->
        <LinearLayout
            android:id="@+id/viewPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_spot_info_action_phone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="11sp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:text="@string/spot_info_actions_phone"/>
        </LinearLayout>

    </LinearLayout>

    <!-- 境界線 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DCDCDC"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>