<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySpotNeighborNarrow">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGroupTableViewBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <!-- カテゴリー -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorTextGray"
                android:layout_marginLeft="@dimen/normal_safe_area_margin"
                android:layout_marginRight="@dimen/normal_safe_area_margin"
                android:text="@string/spot_neighbor_narrow_category_caption"/>
            <include layout="@layout/merge_line_gray"/>
            <LinearLayout
                android:id="@+id/layoutCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_normal_height"
                    android:background="@android:color/white"
                    android:paddingLeft="@dimen/normal_safe_area_margin"
                    android:paddingRight="@dimen/normal_safe_area_margin"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewCategoryTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"
                        android:textSize="@dimen/font_size_row_title"
                        android:textColor="@android:color/black"
                        android:text="@string/spot_neighbor_narrow_no_select"/>

                    <ImageView
                        android:id="@+id/imageViewCategoryAnchor"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="6dp"
                        android:src="@drawable/ic_plus"
                        android:scaleType="fitCenter"/>

                </LinearLayout>
                <include layout="@layout/merge_line_gray"/>
            </LinearLayout>
            <net.tochinavi.www.tochinaviapp.view.ListViewDyamicFit
                android:id="@+id/listViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:divider="@color/colorListDivider"
                android:dividerHeight="@dimen/list_divider_height"/>
            <include layout="@layout/merge_line_gray"/>

            <!-- 表示範囲 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorTextGray"
                android:layout_marginLeft="@dimen/normal_safe_area_margin"
                android:layout_marginRight="@dimen/normal_safe_area_margin"
                android:layout_marginBottom="2dp"
                android:text="@string/spot_neighbor_narrow_distance_caption"/>
            <include layout="@layout/merge_line_gray"/>

            <LinearLayout
                android:id="@+id/layoutDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_normal_height"
                    android:background="@android:color/white"
                    android:paddingLeft="@dimen/normal_safe_area_margin"
                    android:paddingRight="@dimen/normal_safe_area_margin"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewDistanceTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"
                        android:textSize="@dimen/font_size_row_title"
                        android:textColor="@android:color/black"
                        android:text="@string/spot_neighbor_narrow_select"/>

                    <ImageView
                        android:id="@+id/imageViewDistanceAnchor"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="6dp"
                        android:src="@drawable/ic_plus"
                        android:scaleType="fitCenter"/>

                </LinearLayout>
                <include layout="@layout/merge_line_gray"/>
            </LinearLayout>

            <net.tochinavi.www.tochinaviapp.view.ListViewDyamicFit
                android:id="@+id/listViewDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:divider="@color/colorListDivider"
                android:dividerHeight="@dimen/list_divider_height"/>
            <include layout="@layout/merge_line_gray"/>

            <!-- その他 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorTextGray"
                android:layout_marginLeft="@dimen/normal_safe_area_margin"
                android:layout_marginRight="@dimen/normal_safe_area_margin"
                android:text="@string/spot_neighbor_narrow_other_caption"/>
            <include layout="@layout/merge_line_gray"/>
            <LinearLayout
                android:id="@+id/layoutCoupon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_normal_height"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/normal_safe_area_margin"
                android:paddingRight="@dimen/normal_safe_area_margin"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:textSize="@dimen/font_size_row_title"
                    android:textColor="@android:color/black"
                    android:text="@string/spot_neighbor_narrow_coupon_title"/>

                <CheckBox
                    android:id="@+id/checkboxCoupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyCheckBox"/>

            </LinearLayout>
            <include layout="@layout/merge_line_gray"/>
            <!-- Button分のマージン -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/cmn_btn_ok_cancel_height"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

    <!-- Footerボタン -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGroupTableViewBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <!-- 条件をクリア -->
        <net.tochinavi.www.tochinaviapp.view.ButtonCancel
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="@dimen/cmn_btn_ok_cancel_height"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="clear"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <!-- 検索 -->
        <net.tochinavi.www.tochinaviapp.view.ButtonAction
            android:id="@+id/buttonSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/cmn_btn_ok_cancel_height"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="search"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>